Text overflow in code examples - fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ pre {
     width: 100%;
 }
 
-code {
+.highlight code {
     overflow-x: scroll;
     display: block;
 }
